Fix logo image alignment in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ a { text-decoration: none; color: inherit; }
    height: 75px;
    width: auto;
    display: block
+   align: right;
 }
 
 .nav {
